# source_modifier

./: README.md  config_utils.py  file_utils.py  main.py  processor.py  pyproject.toml  requirements-dev.txt  requirements.txt  results.json  results.txt  results_writer.py  setup.py
sample_configs/: config.json  text_config.json  update_query_config.json
sample_target/: sample_bicep.bicep  sample_input.json
src/: config_utils.py  results.json
src/sample_target/: Deploy-VM-DataDiskSpace-Alert.json
src/source_modifier/: main.py  processor.py  results.json  results_writer.py  sample_input.json
src/source_modifier/sample_configs/: config-change-queries.json  config-insert-lines.json  config-region-rename.json  config-rename-network-alert-rules.json  config-rename-services-alert-rules.json  config-rename-subscriptions-alert-rules.json  config-rename-virtualmachines-alert-rules.json  config.json  text_config.json
src/source_modifier/sample_target/: Deploy-VM-DataDiskSpace-Alert.json  sample_input.yml
tests/: expected_output.py  expected_output.yml  sample_config.py  sample_input.json  sample_input.txt  sample_input.yml  test_processor.py
