[build-system]
requires = ["setuptools>=42", "wheel"]  # Build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "source_modifier"  # Your project name
version = "0.1.0"  # Version of your project
description = "A Python script to modify source code."  # Short description
readme = "README.md"  # Path to your README file
requires-python = ">=3.7"  # Minimum Python version
license = {text = "MIT"}  # License type
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
homepage = "https://github.com/manalotoj/source_modifier"  # Homepage URL
repository = "https://github.com/manalotoj/source_modifier"  # Repository URL
keywords = ["source", "modifier", "python"]  # List of keywords

[project.dependencies]
jsonpath-ng[ext] = "==1.5.3"  # Pin exact version with optional extras
PyYAML = "*"  # Any version of PyYAML

[project.optional-dependencies]
dev = ["pytest", "black"]  # Development dependencies (e.g., testing, linting)

[project.scripts]
source_modifier = "source_modifier.main:main"  # CLI command entry point
