[build-system]
requires = []  # This will be dynamically populated from `requirements-dev.txt`
build-backend = "setuptools.build_meta"

[project]
name = "source_modifier"
version = "0.1.0"
description = "A Python script to modify source code."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Manalotoj", email = "mail@mail.com"}
]
homepage = "https://github.com/manalotoj/source_modifier"
repository = "https://github.com/manalotoj/source_modifier"
keywords = ["source", "modifier", "python"]

[project.dependencies]
# Runtime dependencies will be loaded dynamically from src/requirements.txt

[project.optional-dependencies]
dev = ["pytest", "black"]  # Additional dev dependencies

[project.scripts]
source_modifier = "src.main:main"
