[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source_modifier"
version = "0.1.1"
description = "A Python script to modify source code."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Manalotoj", email = "mail@mail.com"}
]

dependencies = [
    "jsonpath-ng[ext]",
    "PyYAML"
]

[project.urls]
homepage = "https://github.com/manalotoj/source_modifier"
repository = "https://github.com/manalotoj/source_modifier"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
source_modifier = "source_modifier.main:main"
